# jetpack-store-manager

./: .gitignore  AGENTS.md  composer.json  deploy.command  jetpack-store-manager.php  phpunit.xml
.github/workflows/: phpunit.yml
01-WORDPRESS-SUBIR/: CREAR_ZIP_PARA_WORDPRESS.command
01-WORDPRESS-SUBIR/jetpack-store-manager/: composer.json
02-DESKTOP-BPM-APP/: README.md  pyproject.toml  requirements.txt  run_gui.command
02-DESKTOP-BPM-APP/src/bpm_desktop/: b2_client.py  bpm_engine.py  constants.py  csv_exporter.py  db.py  main.py  models.py  pipeline.py  preflight.py  quality_gate.py  security.py  wp_client.py
02-DESKTOP-BPM-APP/src/bpm_desktop/gui/: main_window.py
02-DESKTOP-BPM-APP/src/bpm_desktop/services/: __init__.py  app_context.py
03-PROYECTO-TRABAJO/: AGENTS.md  ORGANIZACION_CARPETAS.md
03-PROYECTO-TRABAJO/_ai_knowledge/: 2026-02-06-1603-crear-skill-global-de-memoria-ai.md  2026-02-06-1657-cierre-documental-de-phase-0.md  2026-02-06-1814-cerrar-phase-2-con-data-layer-smoke-y-docs.md  2026-02-06-1850-cerrar-phase-3-con-domain-model-y-smoke.md  2026-02-06-1907-phase-4-contrato-api-v2-rest-piloto.md  (+58 more)
desktop-app/: .env.example  pyproject.toml  requirements.txt
desktop-app/src/bpm_desktop/: b2_client.py  bpm_engine.py  constants.py  csv_exporter.py  db.py  logging_config.py  main.py  models.py  pipeline.py  preflight.py  quality_gate.py  security.py  wp_client.py
desktop-app/src/bpm_desktop/gui/: __init__.py  _base.py  main_window.py  step_backfill.py  step_connections.py  step_dryrun.py  step_preflight.py  step_publish.py  step_report.py  step_review.py
desktop-app/src/bpm_desktop/services/: app_context.py
desktop-app/tests/: conftest.py  test_bpm_engine.py  test_csv_exporter.py  test_db.py  test_models.py  test_quality_gate.py
docs/: DATA_STORES.md  ENDPOINTS.md  PHASE0_NOTES.md  PHASE2_MIGRATION.md  REFRACTORING_PLAN.md  RELEASE_CHECKLIST.md  SESSIONS.md  SMOKE_TESTS.md
includes/: class-access-manager.php  class-jpsm-access-service.php  class-jpsm-admin-views.php  class-jpsm-admin.php  class-jpsm-api-contract.php  class-jpsm-auth.php  class-jpsm-dashboard.php  class-jpsm-data-layer.php  class-jpsm-sales.php
mediavault-v2/: .env.example  .gitignore  BUGS-PENDIENTES.md  CONFIG.md  FUNCIONALIDADES-WORDPRESS.md  package-lock.json  package.json  vercel.json  vitest.config.ts
plugin/: .env.example  .gitignore  build.mjs  composer.json  jetpack-store-manager.php  package-lock.json  package.json  phpstan-baseline.neon  phpstan.neon  uninstall.php
templates/: jpsm-dashboard.php  jpsm-login.php  page-fullwidth.php
tests/: bootstrap.php
(+239 files in other folders)
