[project]
name = "jpsm-bpm-desktop"
version = "0.1.0"
description = "Desktop GUI para análisis BPM masivo e integración con MediaVault"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8.0",
  "requests>=2.32.0",
  "keyring>=25.0.0",
  "numpy>=1.26.0",
  "librosa>=0.10.2",
  "soundfile>=0.12.1",
]

[project.scripts]
jpsm-bpm-desktop = "bpm_desktop.main:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
